Fixed Alignment

--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ h6 {
 }
 
 p {
+	
 	font-size: 16px;
 	font-family: "Work Sans", sans-serif;
 	color: #6a6b7c;
@@ -173,6 +174,27 @@ ol {
 .site-btn {
 	background-image: -o-linear-gradient(330deg, #ee8425 0%, #f9488b 100%), -o-linear-gradient(330deg, #ee8425 0%, #f9488b 100%);
 	background-image: linear-gradient(120deg, #ee8425 0%, #f9488b 100%), linear-gradient(120deg, #ee8425 0%, #f9488b 100%);
+}
+
+
+/*---------------------
+  Eligibility
+-----------------------*/
+#e1{
+	padding-left: 20%; 
+	padding-right: 20%;
+}
+/*---------------------
+  Working
+-----------------------*/
+#working ul{
+
+	font-size: 16px;
+	font-family: "Work Sans", sans-serif;
+	color: #6a6b7c;
+	font-weight: 400;
+	line-height: 28px;
+	margin: 0 0 15px 0;
 }
 
 /* buttons */
@@ -2140,9 +2162,8 @@ ol {
 
 .cc-map {
 	height: 580px;
-	padding-top: 30px;
 	margin-left: -15px;
-	margin-right: 95px;
+	margin-right: -15px;
 	position: relative;
 }
 
@@ -2220,7 +2241,9 @@ ol {
 #coming h2{
 	font-family: 'Fredericka the Great', cursive;font-size: 70px;text-align: center;
 }
-/*-------------------------------- Respinsive Media Styles --------------------------------*/
+
+/*-------------------------------- Responsive Media Styles --------------------------------*/
+
 
 @media only screen and (min-width: 1200px) {
 	.container {
@@ -2358,6 +2381,9 @@ ol {
 	#coming{
 		padding-left: 5%;
 	}
+	#e1 {
+		padding-left:5%;
+	}
 }
 
 /* Large Mobile: 480px */
@@ -2460,6 +2486,11 @@ ol {
 	#coming{
 		padding-left: 15%;
 	}
+	#e1{
+		padding-left:15%!important;
+		
+	}
+
 }
 
 /* Small Mobile: 320px */
